--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "tc-grid",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "homepage": "https://github.com/ThirdCornerLLC/tc-grid",
   "authors": [
     "Zach Barnes <Zacharias3690@gmail.com>",
@@ -8,9 +8,9 @@
   ],
   "description": "Declarative grid directive for AngularJs",
   "main": [
-    "tc-grid.js",
-    "tc-grid-templates.js",
-    "tc-grid.css"
+    "dist/tc-grid.js",
+    "dist/tc-grid-templates.js",
+    "dist/tc-grid.css"
   ],
   "keywords": [
     "grid",
