--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "tc-grid",
-  "version": "0.3.3",
+  "version": "0.4.0",
   "homepage": "https://github.com/ThirdCornerLLC/tc-grid",
   "authors": [
     "Zach Barnes <Zacharias3690@gmail.com>",
@@ -9,7 +9,6 @@
   "description": "Declarative grid directive for AngularJs",
   "main": [
     "dist/tc-grid.js",
-    "dist/tc-grid-templates.js",
     "dist/tc-grid.css"
   ],
   "keywords": [
@@ -25,7 +24,6 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.27",
-    "fontawesome": "~4.2.0"    
+    "angular": ">1.2.27 <2.0" 
   }
 }
