--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "gulp-angular-templatecache": "^1.4.2",
     "gulp-concat": "^2.4.2",
     "gulp-less": "^1.3.6",
-    "run-sequence": "^1.0.2",
-    "vinyl-paths": "^1.0.0"
+    "run-sequence": "^1.0.2"
   }
 }
