--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-angular-templatecache": "^1.4.2",
     "gulp-concat": "^2.4.2",
     "gulp-less": "^1.3.6",
+    "gulp-ng-annotate": "^0.5.0",
     "run-sequence": "^1.0.2"
   }
 }
