--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "author": "Third Corner",
   "license": "ISC",
   "devDependencies": {
-    "del": "^0.1.3",
     "gulp": "^3.8.10",
     "gulp-6to5": "^2.0.2",
+    "gulp-add-src": "^0.2.0",
     "gulp-angular-templatecache": "^1.4.2",
     "gulp-concat": "^2.4.2",
+    "gulp-filter": "^2.0.0",
     "gulp-less": "^1.3.6",
     "gulp-ng-annotate": "^0.5.0",
-    "run-sequence": "^1.0.2"
+    "multipipe": "^0.1.2"
   }
 }
