--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.8.11",
-    "gulp-babel": "^4.0.1",
     "gulp-add-src": "^0.2.0",
     "gulp-angular-templatecache": "^1.6.0",
+    "gulp-babel": "^4.0.1",
     "gulp-concat": "^2.5.2",
     "gulp-filter": "^2.0.2",
     "gulp-less": "^3.0.2",
+    "gulp-minify-css": "^1.1.6",
     "gulp-ng-annotate": "^0.5.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.2.0",
     "multipipe": "^0.1.2"
   }
 }
