--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "tc-grid",
-  "version": "0.7.17",
+  "version": "0.7.18",
   "homepage": "https://github.com/ThirdCornerLLC/tc-grid",
   "authors": [
     "Zach Barnes <Zacharias3690@gmail.com>",
@@ -12,6 +12,8 @@
     "dist/tc-grid.css"
   ],
   "keywords": [
+    "table",
+    "third corner",
     "grid",
     "tc-grid"
   ],
